--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -433,7 +433,7 @@ dialog {
     }
 
     header {
-        padding: 0.75rem 1.25rem;
+        padding: 0.75rem 3rem;
         gap: 1.5rem;
         
     }
@@ -443,7 +443,7 @@ dialog {
     }
 
     main {
-        padding: 0 1.25rem;
+        padding: 0 3rem;
     }
 
     .country-card-container {
@@ -470,4 +470,13 @@ dialog {
         flex-direction: column;
         align-items: flex-start;
     }
+
+    .color-toggle-button > span {
+        font-size: 0.75rem;
+    }
+
+    .moon-icon {
+        font-size: 0.9rem;
+    }
+
 }
